--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+*, ::after, ::before {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+  font-size: .875rem;
+  opacity: 1;
+  overflow-y: scroll;
+  margin: 0;
+  background-color: #eef2f6!important;
+}
+
+a {
+  cursor: pointer;
+  text-decoration: none !important;
+  font-family: 'Poppins', sans-serif;
+}
+
+li {
+  list-style: none;
+} 
