--- a/src/app/composants/clients/delete-clients/delete-clients.component.html
+++ b/src/app/composants/clients/delete-clients/delete-clients.component.html
@@ -1,1 +1,24 @@
-<p>delete-clients works!</p>
+<div class="container-fluid">
+    <div class="mb-3 d-flex justify-content-between">
+        <h4>{{ title }}</h4>
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a class="link-primary">Client</a></li>
+            <li class="breadcrumb-item active">{{ title }}</li>
+        </ol>
+    </div>
+
+    <div class="row g-3 align-items-center">
+        <div class="alert alert-danger" *ngIf="errorMessage">
+            {{errorMessage}}
+        </div>
+        <div class="col-auto">
+          <label for="ID" class="col-form-label">ID:</label>
+        </div>
+        <div class="col-auto">
+          <input type="text" id="ID" class="form-control" [(ngModel)]="id">
+        </div>
+        <div class="col-auto">
+            <button type="button" class="btn btn-outline-danger" (click)="delete()">Supprimer</button>
+        </div>
+    </div>
+</div>
