--- a/src/app/composants/OrgExternes/all-org-externe.component.html
+++ b/src/app/composants/OrgExternes/all-org-externe.component.html
@@ -26,8 +26,8 @@
                         <tr>
                             <th>photo de profile</th>
                             <th>type de l'organisme</th>
-                            <th>Actions</th>
                             <th>ID</th>
+                            <th>Actions</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -35,6 +35,7 @@
                             <td><img src="{{orgExterne.image}}" alt="" width="45" height="45" class="rounded-circle">
                             </td>
                             <td>{{orgExterne.name}}</td>
+                            <td>{{orgExterne.idDestination}}</td>
                             <td>
                                 <div class="row">
                                     <div class="col-4"></div>
@@ -46,7 +47,6 @@
                                     <div class="col-4"></div>
                                 </div>
                             </td>
-                            <td>{{orgExterne.idDestination}}</td>
                         </tr>
                     </tbody>
                 </table>
@@ -68,7 +68,7 @@
                                 <button (click)="fileInput.click()"
                                     style="background-color: transparent; border: none;">
                                     <img [src]="imgUrl" alt="" width="100" height="100" class="rounded-circle ">
-                                    <input hidden type="file" #fileInput (change)="onFileIput(fileInput.files)"
+                                    <input hidden type="file" #fileInput (change)="onFileInput(fileInput.files)"
                                         class="form-control" name="organisme" placeholder="type de degree">
                                 </button>
                             </div>
