--- a/src/app/composants/utilisateurs/all-utilisateurs.component.html
+++ b/src/app/composants/utilisateurs/all-utilisateurs.component.html
@@ -6,13 +6,8 @@
             <li class="breadcrumb-item"><a class="link-primary">{{ title }}</a></li>
         </ol>
     </div>
-    <div class="alert alert-success" *ngIf="typeof successMsg === 'string' && successMsg">
+    <div class="alert alert-success" *ngIf="successMsg">
         {{successMsg}}
-    </div>
-    <div class="alert alert-success" *ngIf="isArray(successMsg)">
-        @for (message of successMsg; track $index) {
-        {{message}}<br>
-        }
     </div>
     <!-- DataTales all users -->
     <div class="card shadow mb-4">
@@ -99,7 +94,8 @@
                             <div class="form-floating mb-3">
                                 <select class="form-select" multiple [(ngModel)]="gestionnaire.roles" required>
                                     <option [ngValue]="gestionnaire.roles" disabled>Choisir un rôle et profile</option>
-                                    <option *ngFor="let role of roles" [ngValue]="role">{{ role.role }} _ {{ role.profile }}</option>
+                                    <option *ngFor="let role of roles" [ngValue]="role">{{ role.role }} _ {{
+                                        role.profile }}</option>
                                 </select>
                             </div>
 
@@ -127,10 +123,9 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                            @for (currentRole of gestionnaire.roles; track $index + '_' + currentRole.id; let i =
-                            $index) {
-                            <div class="col-auto">
-                                <select class="form-select" name="selectRole" [(ngModel)]="gestionnaire.roles![i]"
+                            @for (currentRole of tempRoles; track $index + '_' + currentRole.id; let i = $index) {
+                            <div class="col-auto mb-2">
+                                <select class="form-select" name="selectRole" [(ngModel)]="tempRoles[i]"
                                     [compareWith]="compareRoles">
                                     @for (role of roles; track role.id) {
                                     <option [ngValue]="role">{{role.role}}_{{role.profile}}</option>
@@ -138,10 +133,11 @@
                                 </select>
                             </div>
                             }
+
                         </div>
                         <div class="modal-footer">
-                            <button type="button" id="update-close" class="btn btn-secondary"
-                                data-bs-dismiss="modal">Annuler</button>
+                            <button type="button" id="update-close" class="btn btn-secondary" data-bs-dismiss="modal"
+                                (click)="resetForm()">Annuler</button>
                             <button type="button" class="btn btn-primary" (click)="updateRoleUser()">Modifier</button>
                         </div>
                     </div>
@@ -162,7 +158,7 @@
                         <div class="modal-footer">
                             <button type="button" id="close" class="btn btn-secondary"
                                 data-bs-dismiss="modal">Annuler</button>
-                            <button type="button" class="btn btn-danger" (click)="deleteUser()">Confirmé</button>
+                            <button type="button" class="btn btn-danger" (click)="hideUser()">Confirmé</button>
                         </div>
                     </div>
                 </div>
