--- a/src/app/pages/detaille-incident/afficher-incident.component.html
+++ b/src/app/pages/detaille-incident/afficher-incident.component.html
@@ -31,11 +31,14 @@
                             <p class="text-secondary">Degree</p>
                             <p>{{incident.degree?.type_degree}}</p>
                         </div>
-                        <div class="col-4">
-                            <p class="text-secondary">Organisme affecté</p>
-                            <button class="btn btn-primary" [routerLink]="['/orgExterne']" [queryParams]="{'id': incident.typeCas?.destination?.idDestination}">
-                                {{incident.typeCas?.destination?.name}}
-                            </button>
+                        <div class="col-3">
+                            <p class="text-secondary text-center">Organisme affecté</p>
+                            <div class="d-grid gap-2">
+                                <button class="btn btn-outline-primary" disabled [routerLink]="['/orgExterne']"
+                                    [queryParams]="{'id': incident.typeCas?.destination?.idDestination}">
+                                    {{incident.typeCas?.destination?.name}}
+                                </button>
+                            </div>
                         </div>
 
                     </div>
@@ -63,7 +66,7 @@
                                 <h4>Localisation</h4>
                             </div>
                             <div class="card-body">
-                                <app-map [incidentLocation]="incident.place!"></app-map>
+                                <app-map [incident]="incident"></app-map>
                             </div>
                             <!-- IMAGE -->
                         </div>
