--- a/src/app/composants/OrgExternes/all-org-externe.component.html
+++ b/src/app/composants/OrgExternes/all-org-externe.component.html
@@ -20,7 +20,7 @@
                 Ajouter
             </button>
             <div class="table-responsive">
-                <table class="table table-striped" datatable [dtOptions]="dtoptions" [dtTrigger]="dtTrigger"
+                <table id="dataTable" class="table table-striped" datatable [dtOptions]="dtoptions" [dtTrigger]="dtTrigger" #dtElement
                     width="100%" cellspacing="0">
                     <thead>
                         <tr>
@@ -30,25 +30,7 @@
                             <th>Actions</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr *ngFor="let orgExterne of orgExternes">
-                            <td><img src="{{orgExterne.image}}" alt="" width="45" height="45" class="rounded-circle">
-                            </td>
-                            <td>{{orgExterne.name}}</td>
-                            <td>{{orgExterne.idDestination}}</td>
-                            <td>
-                                <div class="row">
-                                    <div class="col-4"></div>
-                                    <div class="col-4">
-                                        <a (click)="canHide(orgExterne.idDestination!, 'hideOrganisme')">
-                                            <fa-icon [icon]="trash" style="color: rgb(255, 72, 48);"></fa-icon>
-                                        </a>
-                                    </div>
-                                    <div class="col-4"></div>
-                                </div>
-                            </td>
-                        </tr>
-                    </tbody>
+                    <tbody></tbody>
                 </table>
             </div>
             <!-- Add organisme Modal -->
