--- a/src/app/composants/degrees/all-degree.component.html
+++ b/src/app/composants/degrees/all-degree.component.html
@@ -20,32 +20,16 @@
                 Ajouter
             </button>
             <div class="table-responsive">
-                <table class="table table-striped" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger"
+                <table id="dataTable" class="table table-striped" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" #dtElement
                     width="100%" cellspacing="0">
                     <thead>
                         <tr>
                             <th>ID</th>
                             <th>Type de degree</th>
-                            <th>Action</th>
+                            <th>Actions</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr *ngFor="let degree of degrees">
-                            <td>{{degree.id}}</td>
-                            <td>{{degree.type_degree}}</td>
-                            <td>
-                                <div class="row">
-                                    <div class="col-4"></div>
-                                    <div class="col-4">
-                                        <a (click)="prepareDeactivate(degree.id!, 'hideDegree')">
-                                            <fa-icon [icon]="trashIcon" style="color: rgb(255, 72, 48);"></fa-icon>
-                                        </a>
-                                    </div>
-                                    <div class="col-4"></div>
-                                </div>
-                            </td>
-                        </tr>
-                    </tbody>
+                    <tbody></tbody>
                 </table>
             </div>
             <!-- Add degree Modal -->
