--- a/src/app/composants/incidents/all-incidents/all-incidents.component.html
+++ b/src/app/composants/incidents/all-incidents/all-incidents.component.html
@@ -9,18 +9,14 @@
     <div class="alert alert-success" *ngIf="typeof successMsg === 'string' && successMsg">
         {{successMsg}}
     </div>
-    <div *ngIf="loading" class="spinner-border text-primary" role="status">
-        <span class="visually-hidden">Chargement...</span>
-    </div>
-    <!-- DataTales -->
     <div class="card shadow mb-4">
         <div class="card-header py-3">
             <h6 class="m-0 font-weight-bold text-primary">{{ title }}</h6>
         </div>
         <div class="card-body">
             <div class="table-responsive">
-                <table class="table table-striped" datatable [dtOptions]="dtoptions" [dtTrigger]="dtTrigger" #dtElement
-                    #DataTables_Table_0 width="100%" cellspacing="0">
+                <table id="dataTable" class="table table-striped" datatable [dtOptions]="dtoptions"
+                    [dtTrigger]="dtTrigger" #dtElement width="100%" cellspacing="0">
                     <thead>
                         <tr>
                             <th>ID</th>
@@ -31,41 +27,7 @@
                             <th>Actions</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr *ngFor="let incident of incidents; let i = index">
-                            <td>
-                                {{incident.id}}
-                            </td>
-                            <td>{{incident.client?.id}}</td>
-                            <td>
-                                <div style="background-color: rgb(203, 247, 203);border-radius: 5px;">
-                                    {{incident.status}}
-                                </div>
-                            </td>
-                            <td>{{incident.dateCreation}}</td>
-                            <td>{{incident.dernierChEta}}</td>
-                            <td>
-                                <div class="row">
-                                    <div class="col-4">
-                                        <a (click)="canHide(incident, 'updateStatusModal')">
-                                            <fa-icon [icon]="pen"
-                                                style="color: rgb(86, 239, 96); display: inline;"></fa-icon>
-                                        </a>
-                                    </div>
-                                    <div class="col-4">
-                                        <a [routerLink]="['/detailsIncident']" [queryParams]="{ id: incident.id }">
-                                            <fa-icon [icon]="eye" style="color: rgb(44, 44, 245);"></fa-icon>
-                                        </a>
-                                    </div>
-                                    <div class="col-4">
-                                        <a (click)="canHide(incident.id!, 'disableUserModal')">
-                                            <fa-icon [icon]="trash" style="color: rgb(255, 72, 48);"></fa-icon>
-                                        </a>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr>
-                    </tbody>
+                    <tbody></tbody>
                 </table>
             </div>
             <!-- Update status incident Modal -->
