--- a/src/app/composants/incidents/non-affecte/non-affecte.component.html
+++ b/src/app/composants/incidents/non-affecte/non-affecte.component.html
@@ -9,90 +9,50 @@
     <div class="alert alert-success" *ngIf="typeof successMsg === 'string' && successMsg">
         {{successMsg}}
     </div>
-    <div class="alert alert-success" *ngIf="isArray(successMsg)">
-        @for (message of successMsg; track $index) {
-        {{message}}<br>
-        }
-    </div>
-    <!-- DataTales -->
     <div class="card shadow mb-4">
         <div class="card-header py-3">
             <h6 class="m-0 font-weight-bold text-primary">{{ title }}</h6>
         </div>
         <div class="card-body">
             <div class="table-responsive">
-                <table class="table table-striped" datatable [dtOptions]="dtoptions" [dtTrigger]="dtTrigger"
-                    width="100%" cellspacing="0">
+                <table id="dataTable" class="table table-striped" datatable [dtOptions]="dtoptions"
+                    [dtTrigger]="dtTrigger" #dtElement width="100%" cellspacing="0">
                     <thead>
                         <tr>
                             <th>ID</th>
                             <th>ID Client</th>
                             <th>Statut</th>
                             <th>Date</th>
-                            <th>Dernier changement de status</th>
+                            <th>Date changement de status</th>
                             <th>Actions</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr *ngFor="let incident of incidents; let i = index">
-                            <td>
-                                {{incident.id}}
-                            </td>
-                            <td>{{incident.client?.id}}</td>
-                            <td>
-                                <div style="background-color: rgb(203, 247, 203);border-radius: 5px;">
-                                    {{incident.status}}
-                                </div>
-                            </td>
-                            <td>{{incident.dateCreation}}</td>
-                            <td>{{incident.dernierChEta}}</td>
-                            <td>
-                                <div class="row">
-                                    <div class="col-4">
-                                        <a (click)="canHide(incident, 'updateStatusModal')">
-                                            <fa-icon [icon]="pen"
-                                                style="color: rgb(86, 239, 96); display: inline;"></fa-icon>
-                                        </a>
-                                    </div>
-                                    <div class="col-4">
-                                        <a [routerLink]="['/detailsIncident']" [queryParams]="{ id: incident.id }">
-                                            <fa-icon [icon]="eye" style="color: rgb(44, 44, 245);"></fa-icon>
-                                        </a>
-                                    </div>
-                                    <div class="col-4">
-                                        <a (click)="canHide(incident.id!, 'disableUserModal')">
-                                            <fa-icon [icon]="trash" style="color: rgb(255, 72, 48);"></fa-icon>
-                                        </a>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr>
-                    </tbody>
+                    <tbody></tbody>
                 </table>
             </div>
-            <!-- Update role user Modal -->
+            <!-- Update status incident Modal -->
             <div class="modal fade" id="updateStatusModal" data-bs-backdrop="static" data-bs-keyboard="false"
                 tabindex="-1" aria-labelledby="updateStatusModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-sm">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="updateStatusModalLabel">Mettre à jour status de l'incident</h1>
+                            <h1 class="modal-title fs-5" id="updateStatusModalLabel">Mettre à jour status</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
                             <div class="col-auto">
-                            <select name="status" class="form-select" [(ngModel)]="newStatus">
-                                @for (status of statusOptions; track $index) {
-                                <option [ngValue]="status.label">
-                                    {{status.label}}
-                                </option>
-                                }
-                            </select>
+                                <select name="status" class="form-select" [(ngModel)]="newStatus">
+                                    @for (status of statusOptions; track $index) {
+                                    <option [ngValue]="status.label">
+                                        {{status.label}}
+                                    </option>
+                                    }
+                                </select>
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" id="update-close" class="btn btn-secondary" data-bs-dismiss="modal"
-                                (click)="resetForm()">Annuler</button>
+                            <button type="button" id="update-close" class="btn btn-secondary"
+                                data-bs-dismiss="modal">Annuler</button>
                             <button type="button" class="btn btn-primary" (click)="updateStatus()">Modifier</button>
                         </div>
                     </div>
