--- a/src/app/composants/role/all-role.component.html
+++ b/src/app/composants/role/all-role.component.html
@@ -19,7 +19,7 @@
                 Ajouter
             </button>
             <div class="table-responsive">
-                <table class="table table-striped" datatable [dtOptions]="dtoptions" [dtTrigger]="dtTrigger"
+                <table id="dataTable" class="table table-striped" datatable [dtOptions]="dtoptions" [dtTrigger]="dtTrigger" #dtElement
                     width="100%" cellspacing="0">
                     <thead>
                         <tr>
@@ -29,24 +29,7 @@
                             <th>Actions</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr *ngFor="let role of roles">
-                            <td>{{role.id}}</td>
-                            <td>{{role.role}}</td>
-                            <td>{{role.profile}}</td>
-                            <td>
-                                <div class="row">
-                                    <div class="col-4"></div>
-                                    <div class="col-4">
-                                        <a (click)="canHide(role.id!, 'hideRoleModal')">
-                                            <fa-icon [icon]="trash" style="color: rgb(255, 72, 48);"></fa-icon>
-                                        </a>
-                                    </div>
-                                    <div class="col-4"></div>
-                                </div>
-                            </td>
-                        </tr>
-                    </tbody>
+                    <tbody></tbody>
                 </table>
             </div>
             <!-- Add role Modal -->
