--- a/src/app/composants/utilisateurs/all-utilisateurs.component.html
+++ b/src/app/composants/utilisateurs/all-utilisateurs.component.html
@@ -9,6 +9,11 @@
     <div class="alert alert-success" *ngIf="successMsg">
         {{successMsg}}
     </div>
+    <div class="alert alert-danger" *ngIf="errorMsg.length !== 0">
+        @for (message of errorMsg; track $index) {
+        <li style="list-style: disc;">{{message}}</li><br>
+        }
+    </div>
     <!-- DataTales all users -->
     <div class="card shadow mb-4">
         <div class="card-header py-3">
@@ -19,8 +24,8 @@
                 Ajouter
             </button>
             <div class="table-responsive">
-                <table id="dataTable" class="table table-striped" datatable [dtOptions]="dtoptions" [dtTrigger]="dtTrigger" #dtElement
-                    width="100%" cellspacing="0">
+                <table id="dataTable" class="table table-striped" datatable [dtOptions]="dtoptions"
+                    [dtTrigger]="dtTrigger" #dtElement width="100%" cellspacing="0">
                     <thead>
                         <tr>
                             <th>ID</th>
@@ -109,7 +114,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" id="update-close" class="btn btn-secondary" data-bs-dismiss="modal"
-                                (click)="resetForm()">Annuler</button>
+                                >Annuler</button>
                             <button type="button" class="btn btn-primary" (click)="updateRoleUser()">Modifier</button>
                         </div>
                     </div>
