--- a/src/app/pages/page-dashboard/page-dashboard.component.css
+++ b/src/app/pages/page-dashboard/page-dashboard.component.css
@@ -7,8 +7,8 @@
 #sidebar {
   max-width: 250px;
   min-width: 250px;
-  transition: all .35s ease-in-out;
-  
+  transition: all .35s ease-in-out; 
+  overflow-x: auto;
 }
 
 .main {
@@ -53,23 +53,6 @@
   font-weight: 600;
   margin-bottom: 0;
 }
-
-
-/* .sidebar-logo h4 {
-  display: inline-block;
-  color: #e9ecef;
-  font-size: 1.15rem;
-  font-weight: 600;
-  margin-bottom: 0;
-}
-
-.sidebar-logo img {
-  border: 1px solid gray;
-  width: 45px;
-  height: 45px;
-  border-radius: 50%;
-  margin-right: 8px;
-} */
 
 .sidebar-nav {
   flex-grow: 1;
