--- a/src/app/pages/page-login/page-login.component.html
+++ b/src/app/pages/page-login/page-login.component.html
@@ -1,7 +1,10 @@
 <div class="container my-container">
-  <div class="card text-center mx-auto shadow" style="width: 18rem;">
+  <div class="card text-center mx-auto shadow" style="width: 19rem;">
+    <div class="card-header">
+      <h3 class="card-title text-primary m-1">Bienvenu à LISAMA</h3>
+    </div>
     <div class="card-body">
-      <h5 class="card-title">Connecter à votre compte</h5>
+      <h6 class="card-title mb-3">Connecter à votre compte</h6>
       <div class="alert alert-danger" *ngIf="errorMsg">
         {{ errorMsg }}
       </div>
@@ -13,8 +16,8 @@
         <input type="password" class="form-control" name="password" placeholder="Password" [(ngModel)] = "authenticationRequest.password">
         <label>Mot de passe</label>
       </div>
-      <div class="mt-2 d-flex justify-content-between">
-        <button  type="button" class="btn btn-primary" (click)="login()">Se connecter</button>
+      <div class="mx-3 mt-3 d-flex justify-content-center">
+        <button  type="button" class="btn btn-primary mx-" (click)="login()">Se connecter</button>
       </div>
     </div>
   </div>
