--- a/src/app/localisation/map/map.component.css
+++ b/src/app/localisation/map/map.component.css
@@ -1,19 +1,19 @@
 .map-container {
-    position: absolute;
-    top: 30px;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: 30px;
+  position: relative;
+  width: 100%;
+  height: 250px; /* hauteur contrôlée */
+  margin: 0 auto;
+  overflow: hidden;
+  border-radius: 8px;
 }
 
 .map-frame {
-    border: none;
-    height: 100%;
-    width: 100%;
+  width: 100%;
+  height: 100%;
+  border: none;
 }
 
 #map {
-    height: 100%;
-    width: 100%;
+  width: 100%;
+  height: 100%;
 }
