--- a/src/app/pages/detaille-incident/afficher-incident.component.html
+++ b/src/app/pages/detaille-incident/afficher-incident.component.html
@@ -1,78 +1,97 @@
 <div class="container-fluid">
-    <div class="mb-3 d-flex justify-content-between">
-        <h4>{{ title }}</h4>
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a [routerLink]="['/displayAllIncident']">Incidents</a></li>
-            <li class="breadcrumb-item">{{ title }}</li>
-        </ol>
+  <!-- En-tête -->
+  <div class="mb-4 d-flex justify-content-between align-items-center">
+    <h4 class="mb-0">{{ title }}</h4>
+    <ol class="breadcrumb mb-0">
+      <li class="breadcrumb-item">
+        <a [routerLink]="['/displayAllIncident']">Incidents</a>
+      </li>
+      <li class="breadcrumb-item active">{{ title }}</li>
+    </ol>
+  </div>
+
+  <!-- Carte principale -->
+  <div class="card shadow mb-4 mx-2" *ngIf="incident">
+    <div class="card-header py-3">
+      <h6 class="m-0 font-weight-bold text-primary">{{ title }}</h6>
     </div>
 
-    <div class="card shadow mb-4" *ngIf="incident">
-        <div class="card-header py-3">
-            <h6 class="m-0 font-weight-bold text-primary">{{ title }}</h6>
+    <div class="card-body">
+      <!-- Sous-carte des détails -->
+      <div class="card mb-4">
+        <div class="card-header">
+          <h5 class="mb-0">Détails du problème</h5>
         </div>
-        <div class="card-body p-3">
-            <div class="card">
-                <div class="card-header">
-                    <h5>Détails du problème</h5>
-                </div>
-                <div class="card-body p-3">
+        <div class="card-body">
+          <p class="text-secondary mb-3">
+            Description :
+            <strong class="text-dark">{{ incident.decrireAction }}</strong>
+          </p>
 
-                    <p class="text-secondary">Description:
-                        <strong class="text-black">{{incident.decrireAction}}</strong>
-                    </p>
-
-                    <div class="row m-2">
-                        <div class="col-4">
-                            <p class="text-secondary">Type de cas</p>
-                            <p>{{incident.typeCas?.type}}</p>
-                        </div>
-                        <div class="col-4">
-                            <p class="text-secondary">Degree</p>
-                            <p>{{incident.degree?.type_degree}}</p>
-                        </div>
-                        <div class="col-3">
-                            <p class="text-secondary text-center">Organisme affecté</p>
-                            <div class="d-grid gap-2">
-                                <button class="btn btn-outline-primary" disabled [routerLink]="['/orgExterne']"
-                                    [queryParams]="{'id': incident.typeCas?.destination?.idDestination}">
-                                    {{incident.typeCas?.destination?.name}}
-                                </button>
-                            </div>
-                        </div>
-
-                    </div>
-                    <div class="row p-2">
-                        <div class="col-5 m-2 card shadow">
-                            <div class="card-header">
-                                <h4>Support de l'incident</h4>
-                            </div>
-                            <div class="card-body" [ngSwitch]="getFileType(incident.url)">
-
-                                <img *ngSwitchCase="'image'" [src]="incident.url" alt="Incident image"
-                                    style="max-width: 100%; height: auto;" />
-
-                                <!-- VIDEO -->
-                                <video *ngSwitchCase="'video'" [src]="incident.url" controls
-                                    style="max-width: 100%; height: auto;"></video>
-
-                                <!-- AUTRE -->
-                                <p *ngSwitchDefault>Type de fichier non supporté.</p>
-                            </div>
-                            <!-- IMAGE -->
-                        </div>
-                        <div class="col-5 card shadow">
-                            <div class="card-header">
-                                <h4>Localisation</h4>
-                            </div>
-                            <div class="card-body">
-                                <app-map [incident]="incident"></app-map>
-                            </div>
-                            <!-- IMAGE -->
-                        </div>
-                    </div>
-                </div>
+          <div class="row">
+            <div class="col-md-4 mb-3">
+              <p class="text-secondary mb-1">Type de cas</p>
+              <p class="mb-0">{{ incident.typeCas?.type }}</p>
             </div>
+            <div class="col-md-4 mb-3">
+              <p class="text-secondary mb-1">Degré</p>
+              <p class="mb-0">{{ incident.degree?.type_degree }}</p>
+            </div>
+            <div class="col-md-4 mb-3 text-center">
+              <p class="text-secondary mb-1">Organisme affecté</p>
+              <button
+                class="btn btn-outline-primary"
+                disabled
+                [routerLink]="['/orgExterne']"
+                [queryParams]="{ id: incident.typeCas?.destination?.idDestination }"
+              >
+                {{ incident.typeCas?.destination?.name }}
+              </button>
+            </div>
+          </div>
+
+          <!-- Fichiers & Carte -->
+          <div class="row mt-4">
+            <!-- Média -->
+            <div class="col-md-6 mb-4">
+              <div class="card shadow">
+                <div class="card-header">
+                  <h5 class="mb-0">Support de l'incident</h5>
+                </div>
+                <div class="card-body text-center" [ngSwitch]="getFileType(incident.url)">
+                  <img
+                    *ngSwitchCase="'image'"
+                    [src]="incident.url"
+                    alt="Image de l'incident"
+                    class="img-fluid rounded"
+                  />
+
+                  <video
+                    *ngSwitchCase="'video'"
+                    [src]="incident.url"
+                    controls
+                    class="w-100 rounded"
+                  ></video>
+
+                  <p *ngSwitchDefault class="text-danger">Type de fichier non supporté.</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Carte -->
+            <div class="col-md-6 mb-4">
+              <div class="card shadow">
+                <div class="card-header">
+                  <h5 class="mb-0">Localisation</h5>
+                </div>
+                <div class="card-body p-2">
+                  <app-map [incident]="incident"></app-map>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-    </div>
+      </div> <!-- Fin Détails -->
+    </div> <!-- Fin card-body -->
+  </div> <!-- Fin card -->
 </div>
