--- a/src/app/pages/page-login/page-login.component.html
+++ b/src/app/pages/page-login/page-login.component.html
@@ -1,24 +1,47 @@
-<div class="container my-container">
-  <div class="card text-center mx-auto shadow" style="width: 19rem;">
-    <div class="card-header">
-      <h3 class="card-title text-primary m-1">Bienvenu à LISAMA</h3>
+<div class="container d-flex justify-content-center align-items-center min-vh-100">
+  <div class="card shadow rounded-4" style="width: 24rem;">
+    <div class="card-header bg-white border-0 text-center">
+      <h3 class="text-primary fw-bold m-0">Bienvenue à LISAMA</h3>
     </div>
-    <div class="card-body">
-      <h6 class="card-title mb-3">Connecter à votre compte</h6>
-      <div class="alert alert-danger" *ngIf="errorMsg">
+    <div class="card-body px-4">
+
+      <h6 class="mb-3 text-secondary text-center">Connectez-vous à votre compte</h6>
+
+      <!-- Message d'erreur -->
+      <div class="alert alert-danger text-center" *ngIf="errorMsg">
         {{ errorMsg }}
       </div>
+
       <div class="form-floating mb-3">
-        <input type="email" class="form-control" name="login" placeholder="E-mail" [(ngModel)] = "authenticationRequest.login">
-        <label>E-mail</label>
+        <input
+          type="email"
+          class="form-control"
+          id="login"
+          name="login"
+          placeholder="E-mail"
+          [(ngModel)]="authenticationRequest.login"
+        />
+        <label for="login">Adresse e-mail</label>
       </div>
-      <div class="form-floating">
-        <input type="password" class="form-control" name="password" placeholder="Password" [(ngModel)] = "authenticationRequest.password">
-        <label>Mot de passe</label>
+
+      <div class="form-floating mb-3">
+        <input
+          type="password"
+          class="form-control"
+          id="password"
+          name="password"
+          placeholder="Mot de passe"
+          [(ngModel)]="authenticationRequest.password"
+        />
+        <label for="password">Mot de passe</label>
       </div>
-      <div class="mx-3 mt-3 d-flex justify-content-center">
-        <button  type="button" class="btn btn-primary mx-" (click)="login()">Se connecter</button>
+
+      <div class="d-grid mt-4">
+        <button type="button" class="btn btn-primary btn-lg rounded-pill" (click)="login()">
+          Se connecter
+        </button>
       </div>
+
     </div>
   </div>
 </div>
